--- a/static/style/style.css
+++ b/static/style/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Mulish', sans-serif;
+    background: #E5E5E5;
 }
 
 header {
@@ -87,14 +88,125 @@ header {
 }
 
 .content {
+    margin-top: 64px;
     display: flex;
     justify-content: space-between;
 }
 
-.content-left {
+.content-left { 
     width: 816px;
 }
 
-.content-right {
+.content-rigth {
     width: 400px;
+}
+
+.vid {
+    width: 100%;
+    height: 440px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #E2E2EA;
+    border-radius: 8px;
+}
+
+.left-title { 
+    padding-top: 56px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 31px;
+    line-height: 120%;
+    letter-spacing: 0.005em;
+    color: #333333;
+}
+
+.left-text {
+    padding-top: 24px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 120%;
+    letter-spacing: 0.005em;
+    color: #92929D;
+}
+
+.offer {
+    transition-duration: 0.3s;
+    opacity: 0.5;
+    width: 100%;
+    height: 560px;
+    background: #C5010A;
+    border-radius: 8px;
+}
+
+.offer:hover { 
+    transition-duration: 0.6s;
+    opacity: 1;
+}
+
+.offer-t { 
+    display: block;
+    width: 263px;
+    margin: 0 auto;
+    padding-top: 166px;
+    text-align: center;
+    font-weight: 700;
+    font-size: 39px;
+    line-height: 120%;
+    text-align: center;
+    letter-spacing: 0.005em;
+    color: #FFFFFF;
+}
+
+.offer-text {
+    width: 226px;
+    margin: 0 auto;
+    padding-top: 24px;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 120%;
+    text-align: center;
+    letter-spacing: 0.005em;
+    color: #FFFFFF;
+}
+
+.offer-btn { 
+    display: block;
+    margin: 40px auto 0 auto;
+    cursor: pointer;
+    width: 102px;
+    height: 40px;
+    border: 2px solid #FFFFFF;
+    border-radius: 8px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 120%;
+    text-align: center;
+    letter-spacing: 0.005em;
+    color: #FFFFFF;
+    background: none;
+    transition-duration: 0.5s;
+}
+
+.offer-btn:hover {
+    transition-duration: 1s;
+    background-color: #FFFFFF;
+    color: #C5010A;
+}
+
+.block {
+    background: #ffffff;
+    border-radius: 8px; 
+    width: 100%;
+    height: 679px;
+    margin-top: 56px;
+}
+
+.cont {
+    width: 100%;
+    height: 560px;
+    background: #ffffff;
+    border-radius: 8px;
+    margin-top: 16px;
 }
