--- a/static/style/style.css
+++ b/static/style/style.css
@@ -210,3 +210,12 @@ header {
     border-radius: 8px;
     margin-top: 16px;
 }
+
+.contact {
+    font-weight: 700;
+    font-size: 39px;
+    line-height: 120%;
+    letter-spacing: 0.005em;
+    color: #11142D;
+    padding: 48px 72px 32px 44px;
+}
