--- a/static/style/style.css
+++ b/static/style/style.css
@@ -445,3 +445,25 @@ header {
     background-color: #FFFFFF;
     color: #C5010A;
 }
+
+
+.download {
+    width: 100%;
+    margin: 0;
+    border: none;
+    background: #FFFFFF;
+}
+
+.phone {
+    margin-top: 80px;
+    margin-left: 156px;
+}
+
+.down-app {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 120%;
+    letter-spacing: 0.005em;
+    color: #11142D;
+    margin-left: 715px;
+}
