--- a/static/style/style.css
+++ b/static/style/style.css
@@ -452,6 +452,15 @@ header {
     margin: 0;
     border: none;
     background: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    column-gap: 120px;
+    margin-top: 160px;
+}
+
+.text-down {
+    width: 530px;
+    margin-top: 147px;
 }
 
 .phone {
@@ -465,5 +474,29 @@ header {
     line-height: 120%;
     letter-spacing: 0.005em;
     color: #11142D;
-    margin-left: 715px;
+}
+
+.textdownload {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 120%;
+    letter-spacing: 0.005em;
+    color: #92929D;
+    margin-top: 22px;
+}
+
+.advantageItem{
+    display: flex;
+    align-items: center;
+    column-gap: 18px;
+    margin-bottom: 16px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 120%;
+    letter-spacing: 0.005em;
+    color: #11142D;
+}
+
+.list {
+    margin-top: 58px;
 }
