--- a/static/style/style.css
+++ b/static/style/style.css
@@ -228,8 +228,8 @@ header {
 }
 
 .input {
-    width: 296px;
-    height: 56px;
+    width: 265px;
+    padding: 19px 18px 16px;
     border: 1px solid #FA3C45;
     border-radius: 8px; 
     font-weight: 400;
@@ -241,8 +241,8 @@ header {
 }
 
 .input2 {
-    width: 296px;
-    height: 56px;
+    width: 265px;
+    padding: 19px 18px 16px;
     border: 1px solid #FA3C45;
     border-radius: 8px; 
     font-weight: 400;
@@ -258,8 +258,8 @@ header {
     background: #FFFFFF;
     border: 1px solid #FA3C45;
     border-radius: 8px;
-    width: 296px;
-    height: 120px;
+    width: 285px;
+    padding: 19px 0px 82px 16px;
     margin-top: 24px;
     margin-left: 42px;
     font-weight: 400;
@@ -374,9 +374,13 @@ header {
     color: #9A9AB0;   
 }
 
-.period-div {
-    margin-top: -130px;
-    margin-left: 394px;
+.div-1 {
+    display: flex;
+    justify-content: space-between;
+}
+
+.int-per {
+    width: 450px;
 }
 
 .period {
@@ -659,4 +663,107 @@ header {
     border: none;
     background-color: #FA3C45;
     color: #ffffff;
+}
+
+.footer {
+    background: #C5010A;
+    width: 100%;
+    height: 407px;
+    margin-top: 133px;
+}
+
+.footer-div {
+    display: flex;
+    justify-content: space-between;
+    width: 1200px;
+    height: 284px;
+}
+
+.container1 {
+    margin-left: 104px;
+    margin-top: 60px;
+}
+
+.logo2 {
+    width: 135.4px;
+    height: 56px;
+}
+
+.ohio {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 130%;
+    letter-spacing: 0.008em;
+    color: #FFFFFF;
+    width: 196px;
+    height: 72px;
+    margin-top: 45px;
+}
+
+.copy {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 120%;
+    letter-spacing: 0.005em;
+    color: #FFFFFF;
+    margin-top: 100px;
+}
+
+.comp {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 120%;
+    letter-spacing: 0.005em;
+    color: #FFFFFF;
+}
+
+.container2 {
+    margin-top: 95px;
+    margin-left: 240px;
+}
+
+.footer-a {
+    text-decoration: none;
+    font-size: 16px;
+    line-height: 120%;
+    letter-spacing: 0.005em;
+    color: #FFFFFF;
+    border-bottom: 2px solid #C5010A;
+    transition-duration: 0.5s;
+}
+
+.footer-a:hover {
+    border-bottom: 2px solid #ffffff;
+    transition-duration: 0.5s;
+}
+
+.footer-li {
+    margin-top: 10px;
+}
+
+.footer-ul {
+    margin-top: 30px;
+}
+
+.container3 {
+    margin-top: 95px;
+    margin-left: 150px;
+}
+
+.container4 {
+    margin-top: 95px;
+    margin-left: 187px;
+}
+
+.footer-img {
+    width: 24px;
+    height: 24px;
+}
+
+.foot-a2 {
+    font-weight: 600;
+    font-size: 14px;    
+    line-height: 130%;
+    letter-spacing: 0.008em;
+    color: #FFFFFF;
 }
